Token Generation complete

--- a/MovieBaseBack/appsettings.json
+++ b/MovieBaseBack/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MovieContext": "Server=DESKTOP-A3HMT6S;Database=MovieBaseDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:5001",
+    "ValidAudience": "https://localhost:3000",
+    "Secret": "hgf7f65ry5dy6d56564setrysrte56yhjk"
+
   }
 }
